# relab

./: .cspell.yaml  .cspell.yml  .dockerignore  .env.example  .env.prod.compose  .env.staging.compose  .gitignore  .pre-commit-config.yaml  .semgrepignore  .syncpackrc.json  .tool-versions  .trivyignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  biome.base.jsonc  biome.jsonc  codecov.yml  codemeta.json  compose.ci.yaml  compose.ci.yml  compose.deploy.yaml  compose.deploy.yml  compose.dev.yaml  compose.dev.yml  compose.e2e.yaml  compose.e2e.yml  compose.logging.loki.yaml  compose.logging.loki.yml  compose.override.yml  compose.prod.yml  compose.staging.yml  compose.test.yml  compose.yaml  compose.yml  justfile  otel-collector-config.yaml  (+5 more)
backend/: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .env.staging.example  .env.test  .envrc.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.backups  Dockerfile.dev  Dockerfile.migrations  Dockerfile.user-upload-backups  Dockerfile.user_upload_backups  README.md  README_TESTING.md  TESTING_IMPLEMENTATION_SUMMARY.md  VALIDATION_TESTING_SUMMARY.md  alembic.ini  entrypoint.sh  justfile  local_setup.sh  migrations_entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 07d992454431_add_fks.py  0faa2fa19f62_move_from_weight_kg_to_weight_g.py  1f7e8a2b4c6d_rename_stats_cache_to_profile_stats.py  244aa961ea6e_remove_product_dismantling_notes.py  2d0b44bd7af2_remove_last_login_ip.py  33b00b31e537_initial.py  4c248b3004c6_add_last_login_tracking_fields_to_user_.py  4d379aaa416a_add_user_stats_cache.py  591bfc225c05_add_material_product_link_fk_indexes.py  65da9d7e309c_increase_string_fields_max_length.py  6891389e6660_remove_relay_last_seen_at_from_camera.py  6f2b9e4a1c3d_add_recording_session_backstop.py  70e78d937e0b_add_websocket_connection_to_rpi_cams.py  7a6d4e8f9b10_add_upload_size_metadata.py  7dd3d3d99191_add_totp_mfa_to_users.py  84d2f72dccc7_simplify_circularity_properties_model.py  95cc94317b69_add_version_to_taxonomy_model.py  9b7f3c1b4a2d_remove_newsletter_subscribers.py  a1b2c3d4e5f6_add_is_profile_public_to_user.py  a1b2c3d4e5f6_add_tsvector_search_to_material_producttype_category.py  a3fbac86fbbb_tune_autovacuum_for_high_churn_tables.py  a7f3d8e2c1b4_add_thumbnail_path_to_image.py  b43d157d07f1_add_basic_circularity_properties_model.py  b7c1d2e3f4a5_inline_properties_onto_product.py  c4d5e6f7a8b9_consolidate_media_parent_fks.py  c7d8e9f0a1b2_replace_circularity_columns_with_jsonb.py  c9d0e1f2a3b4_add_user_upload_quota_ledger.py  cb66f26a9893_fix_nullable_unit_and_domains.py  d9ffb53c12c0_simplify_rpi_cam_device_auth.py  da288fbcf15e_add_oauth_account_uniqueness_constraint.py  e3d54054d34a_add_user_preferences.py  e5f6a7b8c9d0_remove_product_dismantling_times.py  e8f9a0b1c2d3_split_product_roles.py  eddf31f2e90c_remove_organizations.py  f3a8c2d1e5b7_add_product_full_text_and_trigram_search.py  f8a91c2d4e6b_add_user_email_canonical.py
backend/app/: __init__.py  __version__.py  main.py  version.py
backend/app/api/: audiences.py  exceptions.py
backend/app/core/: __init__.py  background_tasks.py  cache.py  config.py  constants.py  database.py  env.py  http.py  http_headers.py  images.py  lifecycle.py  logging.py  model_registry.py  redis.py  request_size.py  responses.py  runtime.py  secrets.py  telemetry.py
backend/app/templates/: index.html  login.html
backend/perf/: README.md  k6-baseline.js
backend/reports/performance/: 2026-03-30-ci-baseline.md  2026-03-30-docker-dev-baseline.md  2026-04-16-ci-baseline.md  README.md  latest-k6-summary.json
backend/scripts/: __init__.py  backup_user_uploads.sh  check_db_empty.py  cleanup_files.py  clear_cache.py  compile_email_templates.py  create_superuser.py  create_user.py  db_is_empty.py  db_sync.py  local_setup.sh  render_erd.py
backend/scripts/backup/: README.md  backup_pg_database.sh  backup_rclone.sh  backup_relab_restic.sh  backup_relab_restic_entrypoint.sh  backup_user_uploads.sh  rclone_backup.sh  rsync_backup.sh  user_upload_backups_entrypoint.sh
backend/scripts/db/: is_empty.py  sync.py
backend/scripts/generate/: __init__.py  compile_email_templates.py  export_openapi.py  render_erd.py
backend/scripts/maintenance/: __init__.py  backfill_profile_stats.py  backfill_user_stats.py  cleanup_files.py  clear_cache.py  migrate_encryption_v1_to_v2.py  refresh_common_passwords.py  refresh_disposable_email_domains.py
backend/scripts/perf/: __init__.py  apply_thresholds.py  perf_ci.py  write_ci_report.py
backend/scripts/plugins/: __init__.py
backend/scripts/seed/: __init__.py  cpv.py  dummy_data.json  dummy_data.py  harmonized_system.py  migrations_entrypoint.sh
backend/scripts/users/: __init__.py  create_superuser.py  create_user.py
backend/tests/: README.md  TESTING.md  VALIDATION_TESTING.md  conftest.py  constants.py  test_main.py  test_migrations.py
backend/tests/api/: test_background_data_endpoints.py
backend/tests/constants/: __init__.py  background_data.py
backend/tests/factories/: __init__.py  background_data.py  emails.py  models.py  products.py  users.py
backend/tests/fixtures/: __init__.py  auth.py  client.py  data.py  database.py  migrations.py  redis.py
backend/tests/helpers/: seed.py
backend/tests/integration/: conftest.py  (+3 more)
docs/: .dockerignore  .gitignore  .markdownlint-cli2.mjs  Caddyfile  Dockerfile  Dockerfile.dev  README.md  __init__.py  astro.config.mjs  biome.json  biome.jsonc  justfile  main.py  mkdocs.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  zensical.toml
docs/docs/: index.md
docs/e2e/: accessibility.spec.ts  api-reference.spec.ts  smoke.spec.ts  structure.spec.ts  theme.spec.ts  visual.spec.ts
docs/overrides/: main.html
docs/public/: robots.txt
docs/scripts/: check-external-links.mjs  check-lighthouse.mjs  check-no-cdn-imports.mjs  run-with-preview.mjs
docs/src/: content.config.ts
rpi_cam/: .env.example  .gitignore  README.md  pyproject.toml
rpi_cam/app/: main.py
(+1699 files in other folders)
