[project]
  ## Project metadata
  authors = [{ name = "Simon van Lierde", email = "s.n.van.lierde@cml.leidenuniv.nl" }]
  classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License-Expression :: AGPL-3.0-or-later",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
  ]
  description = "Reverse Engineering Lab monorepo"
  keywords = ["automated-lca", "circular-economy", "computer-vision"]
  license = { text = "AGPL-3.0-or-later" }
  maintainers = [{ name = "Simon van Lierde", email = "s.n.van.lierde@cml.leidenuniv.nl" }]
  name = "relab"
  readme = "README.md"

  ## Dependencies and version constraints
  requires-python = ">=3.14"
  # NOTE: package versioning across the repo is managed by release-please.
  version = "1.0.0"

[dependency-groups]
  dev = ["commitizen>=4.8.3", "pre-commit>=4.2.0"]

[tool.commitizen]
  annotated_tag      = true
  major_version_zero = true
  name               = "cz_conventional_commits"
  tag_format         = "v$version"
  version_scheme     = "semver2"
