[project]
  ## Project metadata
  authors = [
    { name = "Franco Donati", email = "f.donati@cml.leidenuniv.nl" },
    { name = "Simon van Lierde", email = "s.n.van.lierde@cml.leidenuniv.nl" },
  ]
  classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
  ]
  description = "Data collection app for the reverse engineering lab project at CML."
  keywords = ["automated-lca", "circular-economy", "computer-vision"]
  license = "AGPL-3.0-or-later"
  maintainers = [{ name = "Simon van Lierde", email = "s.n.van.lierde@cml.leidenuniv.nl" }]
  name = "relab-backend"
  readme = "README.md"

  ## Dependencies and version constraints
  dependencies = [
    # TODO: Move to Python 3.14 once asyncpg supports it (version 0.31.0+, see https://github.com/MagicStack/asyncpg/issues/1282)
    "asyncpg>=0.30.0",
    "cachetools>=5.5.2",
    "email-validator>=2.2.0",
    "fastapi-cache2-fork>=2.3.0",
    "fastapi-filter>=2.0.1",
    "fastapi-mail",
    "fastapi-pagination>=0.13.2",
    # NOTE: This is a heavy dependency (~40MB) due to its use of boto3, even though we don't use any cloud storage
    # We should consider using a more lightweight alternative if it becomes available.
    # Alternatively, we could write the local file storage backend ourselves.
    "fastapi-storages >=0.3.0",
    # NOTE: We use a custom fork of fastapi-users-db-sqlmodel to support Pydantic V2
    "fastapi-users-db-sqlmodel",
    "fastapi-users[oauth,sqlalchemy]>=14.0.1",
    "fastapi[standard] >=0.115.14",
    "markdown>=3.8.2",
    "mjml>=0.11.1",
    "pillow >=11.2.1",
    "psycopg[binary] >=3.2.9",
    "pydantic >=2.12",
    "pydantic-extra-types >=2.10.5",
    "pydantic-settings >=2.10.1",
    "python-dotenv >=1.1.1",
    "python-slugify>=8.0.4",
    "redis>=5.2.1",
    "relab-rpi-cam-models>=0.1.1",
    "sqlalchemy >=2.0.41",
    "sqlmodel >=0.0.27",
    "tldextract>=5.3.0",
  ]
  requires-python = ">= 3.13"
  version = "0.1.0"

  [project.urls]
    Homepage   = "https://github.com/CMLPlatform/relab"
    Issues     = "https://github.com/CMLPlatform/relab/issues"
    Repository = "https://github.com/CMLPlatform/relab.git"

### Dependency groups
[dependency-groups]
  dev = [ # Development dependencies. See also https://docs.astral.sh/uv/concepts/dependencies/#development-dependencies
    "alembic-autogen-check >=1.1.1",
    "paracelsus>=0.9.0",
    "ruff >=0.12.1",
    "ty>=0.0.15",
  ]

  api = [
    "coloredlogs>=15.0.1",
    # NOTE: This is a heavy dependency (~90MB) due to it storing all of Google's API specifications.
    # We should consider using a more lightweight alternative if it becomes available.
    # Alternatively, we could write the required API calls manually using `google-auth` and `google-auth-httplib2` directly.
    "google-api-python-client>=2.174.0",
    "google-auth>=2.40.3",
    "itsdangerous>=2.2.0",
    "markupsafe >=3.0.2",
  ]

  migrations = ["alembic >=1.16.2", "alembic-postgresql-enum >=1.7.0", "openpyxl>=3.1.5", "pandas>=2.3.3"]

  tests = [
    # Core testing frameworks
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.5.0",   # Parallel test execution
    "pytest>=8.4.1",

    # HTTP and async testing
    "httpx>=0.27.0", # Modern async HTTP client

    # Test data generation
    "faker>=33.3.0",       # Realistic test data
    "polyfactory>=2.15.0", # Modern factories with Pydantic v2 support

    # Database testing
    "pytest-alembic>=0.12.1", # Migration testing - verify schema changes

    # Redis testing
    "fakeredis[lua]>=2.25.0", # In-memory Redis for testing

    # Mocking and assertions
    "dirty-equals>=0.8.0", # Flexible assertions for dynamic data
    "pytest-mock>=3.14.0", # Better mocking with cleaner pytest integration
    "syrupy>=4.6.0",       # Snapshot testing for API responses
  ]

### Tool configuration
[tool.alembic]
  path_separator   = "os"
  prepend_sys_path = ["."]
  script_location  = "alembic"

  [[tool.alembic.post_write_hooks]]
    executable = "%(here)s/.venv/bin/ruff"
    name       = "ruff"
    options    = "check --fix REVISION_SCRIPT_FILENAME"
    type       = "exec"

  [[tool.alembic.post_write_hooks]]
    executable = "%(here)s/.venv/bin/ruff"
    name       = "ruff_format"
    options    = "format REVISION_SCRIPT_FILENAME"
    type       = "exec"

[tool.paracelsus]
  base = "app.api.common.models.base:CustomBase"
  column_sort = "preserve-order"
  imports = [
    "app.api.auth.models",
    "app.api.background_data.models",
    "app.api.common.models.associations",
    "app.api.data_collection.models",
    "app.api.file_storage.models.models",
    "app.api.plugins.rpi_cam.models",
  ]

[tool.pytest.ini_options]
  addopts = "-ra -q --strict-markers --strict-config"
  asyncio_default_fixture_loop_scope = "function"
  asyncio_mode = "auto"
  markers = [
    "api: API endpoint tests (E2E, full stack)",
    "auth: Authentication/authorization tests",
    "integration: Tests requiring database (schema, relationships)",
    "migration: Database migration tests",
    "slow: Tests that take >1s",
    "unit: Fast unit tests without database (schemas, utilities)",
  ]
  python_classes = ["Test*"]
  python_files = ["test_*.py"]
  python_functions = ["test_*"]
  testpaths = ["tests"]

[tool.coverage.run]
  branch = true
  omit   = ["*/__pycache__/*", "*/alembic/*", "*/migrations/*", "*/tests/*"]
  source = ["app"]

[tool.coverage.report]
  fail_under   = 80    # Target 80%+ coverage
  precision    = 2
  show_missing = true
  skip_covered = false

[tool.ruff]
  fix            = true
  line-length    = 120
  target-version = "py314"

  # Exclude automatically generated files from linting
  extend-exclude = ["./alembic/versions"]

  [tool.ruff.format]
    docstring-code-format = true

  [tool.ruff.lint]
    fixable = ["ALL"]
    select  = ["ALL"]

    ignore = [
      # Prevent conflicts with formatter (see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
      "ANN204", # missing-return-type-special-method
      "COM812", # missing-trailing-comma
      "COM819", # prohibited-trailing-comma
      "E111",   # indentation-with-invalid-multiple
      "E114",   # indentation-with-invalid-multiple-comment
      "E117",   # over-indented
      "Q",      # flake8-quotes
      "W191",   # tab-indentation

      # Overly strict rules
      "D105", # undocumented-magic-method (magic methods are often self-explanatory)
      "D107", # undocumented-public-init (__init__ methods are often self-explanatory)
    ]

    [tool.ruff.lint.flake8-bugbear]
      # Allow default arguments for FastAPI Depends and Query
      extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi_filter.FilterDepends"]

    [tool.ruff.lint.flake8-type-checking]
      exempt-modules = ["app", "fastapi", "fastapi_users", "pydantic", "sqlalchemy", "sqlmodel", "typing.Annotated"]
      runtime-evaluated-base-classes = [
        "fastapi_filter.contrib.sqlalchemy.FilterSet",
        "pydantic.BaseModel",
        "sqlmodel.SQLModel",
      ]

    # Allow runtime imports for FastAPI dependency injection and Pydantic validation
    [tool.ruff.lint.per-file-ignores]
      # Ignore security issues over use of `assert` in test files
      "test*.py" = ["S101"]

    [tool.ruff.lint.pydocstyle]
      convention = "google"

    [tool.ruff.lint.pylint]
      allow-magic-value-types = ["int"]
      max-args                = 10

[tool.uv]
  default-groups = ["api", "dev", "migrations", "tests"]

  [tool.uv.sources]
    fastapi-cache2-fork       = { git = "https://github.com/Yolley/fastapi-cache.git" }                 # Allow runtime type checks for FastAPI and Pydantic models
    fastapi-users-db-sqlmodel = { git = "https://github.com/simonvanlierde/fastapi-users-db-sqlmodel" } # Fetch FastAPI-Users-DB-SQLModel from custom fork on GitHub for Pydantic V2 support
