[project]
  ## Project metadata
  authors = [{ name = "Simon van Lierde", email = "s.n.van.lierde@cml.leidenuniv.nl" }]
  classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License-Expression :: AGPL-3.0-or-later",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
  ]
  description = "Data collection app for the reverse engineering lab project at CML."
  keywords = ["automated-lca", "circular-economy", "computer-vision"]
  license = { text = "AGPL-3.0-or-later" }
  maintainers = [{ name = "Simon van Lierde", email = "s.n.van.lierde@cml.leidenuniv.nl" }]
  name = "relab-backend"
  readme = "README.md"

  ## Dependencies and version constraints
  dependencies = [
    "asyncpg>=0.30.0",
    "cachetools>=5.5.2",
    "email-validator>=2.2.0",
    "fastapi-cache2-fork>=2.3.0",
    "fastapi-filter>=2.0.1",
    "fastapi-mail",
    "fastapi-pagination>=0.13.2",
    # NOTE: This is a heavy dependency (~40MB) due to its use of boto3, even though we don't use any cloud storage
    # TODO: We should consider using a more lightweight alternative if it becomes available.
    # Alternatively, we could write the local file storage backend ourselves.
    "fastapi-storages >=0.3.0",
    # NOTE: We use a custom fork of fastapi-users-db-sqlmodel to support Pydantic V2
    "fastapi-users-db-sqlmodel",
    "fastapi-users[oauth,redis,sqlalchemy]>=14.0.1",
    "fastapi[standard] >=0.115.14",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "markdown>=3.8.2",
    "mjml>=0.11.1",
    "piexif>=1.1.3",
    "pillow >=11.2.1",
    "psycopg[binary] >=3.2.9",
    "pydantic >=2.12",
    "pydantic-extra-types >=2.10.5",
    "pydantic-settings >=2.10.1",
    "python-dotenv >=1.1.1",
    "python-slugify>=8.0.4",
    "redis>=5.2.1",
    "relab-rpi-cam-models>=0.1.1",
    "slowapi>=0.1.9",
    "sqlalchemy >=2.0.41",
    "sqlmodel >=0.0.27",
  ]
  requires-python = ">= 3.14"
  version = "0.1.0"

  [project.urls]
    Homepage   = "https://github.com/CMLPlatform/relab"
    Issues     = "https://github.com/CMLPlatform/relab/issues"
    Repository = "https://github.com/CMLPlatform/relab.git"

### Dependency groups
[dependency-groups]
  dev = ["paracelsus>=0.9.0", "pip-audit>=2.8", "ruff >=0.12.1", "ty>=0.0.15"]

  api = ["httpx[http2]>=0.28.1", "itsdangerous>=2.2.0"]

  migrations = ["alembic >=1.16.2", "alembic-postgresql-enum >=1.7.0", "openpyxl>=3.1.5", "pandas>=2.3.3"]

  tests = [
    # Core testing frameworks
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.5.0",   # Parallel test execution
    "pytest>=8.4.1",
    # HTTP and async testing
    "httpx[http2]>=0.27.0", # Modern async HTTP client
    # Test data generation
    "faker>=33.3.0",       # Realistic test data
    "polyfactory>=2.15.0", # Modern factories with Pydantic v2 support
    # Database testing
    "pytest-alembic>=0.12.1",          # Migration testing - verify schema changes
    "testcontainers[postgres]>=4.8.2", # Ephemeral PostgreSQL for integration tests
    # Redis testing
    "fakeredis[lua]>=2.25.0", # In-memory Redis for testing
    # Mocking and assertions
    "dirty-equals>=0.8.0", # Flexible assertions for dynamic data
    "pytest-mock>=3.14.0", # Better mocking with cleaner pytest integration
  ]

### Tool configuration
[tool.alembic]
  path_separator   = "os"
  prepend_sys_path = ["."]
  script_location  = "alembic"

  [[tool.alembic.post_write_hooks]]
    executable = "%(here)s/.venv/bin/ruff"
    name       = "ruff"
    options    = "check --fix REVISION_SCRIPT_FILENAME"
    type       = "exec"

  [[tool.alembic.post_write_hooks]]
    executable = "%(here)s/.venv/bin/ruff"
    name       = "ruff_format"
    options    = "format REVISION_SCRIPT_FILENAME"
    type       = "exec"

[tool.paracelsus]
  base = "app.api.common.models.base:CustomBase"
  column_sort = "preserve-order"
  imports = [
    "app.api.auth.models",
    "app.api.background_data.models",
    "app.api.common.models.associations",
    "app.api.data_collection.models",
    "app.api.file_storage.models.models",
    "app.api.plugins.rpi_cam.models",
  ]

[tool.pytest.ini_options]
  addopts = "-ra --strict-markers --strict-config"
  asyncio_default_fixture_loop_scope = "function"
  asyncio_mode = "auto"
  log_cli = false
  log_cli_format = "%(message)s"
  log_cli_level = "INFO"
  markers = [
    "api: API endpoint tests (E2E, full stack)",
    "auth: Authentication/authorization tests",
    "integration: Tests requiring database (schema, relationships)",
    "migration: Database migration tests",
    "slow: Tests that take >1s",
    "unit: Fast unit tests without database (schemas, utilities)",
  ]
  python_classes = ["Test*"]
  python_files = ["test_*.py"]
  python_functions = ["test_*"]
  testpaths = ["tests"]

[tool.coverage.run]
  branch    = true
  data_file = "reports/coverage/.coverage"
  omit      = ["*/__pycache__/*", "*/alembic/*", "*/tests/*"]
  source    = ["app"]

[tool.coverage.report]
  fail_under   = 80    # Target 80%+ coverage
  precision    = 2
  show_missing = true
  skip_covered = false

[tool.coverage.html]
  directory = "reports/coverage/html"

[tool.coverage.xml]
  output = "reports/coverage/coverage.xml"

[tool.ruff]
  fix            = true
  line-length    = 120
  target-version = "py314"

  [tool.ruff.format]
    docstring-code-format = true

  [tool.ruff.lint]
    fixable = ["ALL"]
    select  = ["ALL"]

    ignore = [
      # Prevent conflicts with formatter (see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
      "ANN204", # missing-return-type-special-method
      "COM812", # missing-trailing-comma
      "COM819", # prohibited-trailing-comma
      "E111",   # indentation-with-invalid-multiple
      "E114",   # indentation-with-invalid-multiple-comment
      "E117",   # over-indented
      "Q",      # flake8-quotes
      "W191",   # tab-indentation

      # Overly strict rules
      "D105", # undocumented-magic-method (magic methods are often self-explanatory)
      "D107", # undocumented-public-init (__init__ methods are often self-explanatory)

      # TODO: Re-enable these linting rules when we have more than one developer.
      "TD002", # Allow todos without authors
      "TD003", # Allow todos without issue links
    ]

    [tool.ruff.lint.flake8-bugbear]
      # Allow default arguments for FastAPI Depends and Query
      extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi_filter.FilterDepends"]

    [tool.ruff.lint.flake8-type-checking]
      # Allow runtime imports for FastAPI dependency injection and Pydantic validation
      exempt-modules = ["app", "fastapi", "fastapi_users", "pydantic", "sqlalchemy", "sqlmodel", "typing.Annotated"]
      runtime-evaluated-base-classes = [
        "fastapi_filter.contrib.sqlalchemy.FilterSet",
        "pydantic.BaseModel",
        "sqlmodel.SQLModel",
      ]

    [tool.ruff.lint.per-file-ignores]
      "**/alembic/**/*.py" = [
        "D103",   # Up and downgrade functions are self-explanatory
        "D415",   # Alembic auto-generates script docs without punctuation
        "F401",   # Ignore unused imports, which are often required for schema changes but not directly referenced in the code
        "INP001", # The alembic scripts are not meant to be a package
        "TC003",  # Allow runtime evaluation of base classes
      ]
      "test*.py" = [
        "PLR2004", # Allow magic values in test files
        "S101",    # Ignore security issues over use of `assert` in test files
      ]

    [tool.ruff.lint.isort]
      # Explicitly add known first-party and third-party modules to allow invocation from the project root
      known-first-party = ["app", "scripts", "tests"]

      # Prevent the alembic directory from shadowing the alembic PyPI package
      known-third-party = ["alembic"]

    [tool.ruff.lint.pydocstyle]
      convention = "google"

    [tool.ruff.lint.pylint]
      allow-magic-value-types = ["int"]
      max-args                = 10

[tool.uv]
  default-groups = ["api", "dev", "migrations", "tests"]

  [tool.uv.sources]
    fastapi-cache2-fork       = { git = "https://github.com/simonvanlierde/fastapi-cache" }             # Allow runtime type checks for FastAPI and Pydantic models
    fastapi-users-db-sqlmodel = { git = "https://github.com/simonvanlierde/fastapi-users-db-sqlmodel" } # Fetch FastAPI-Users-DB-SQLModel from custom fork on GitHub for Pydantic V2 support
    slowapi                   = { git = "https://github.com/simonvanlierde/slowapi" }                   # Fork of slowapi with fixed deprecation warnings
