[project]
  ## Project metadata
  authors = [{ name = "Simon van Lierde", email = "s.n.van.lierde@cml.leidenuniv.nl" }]
  classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License-Expression :: AGPL-3.0-or-later",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
  ]
  description = "Data collection app for the reverse engineering lab project at CML."
  keywords = ["automated-lca", "circular-economy", "computer-vision"]
  license = { text = "AGPL-3.0-or-later" }
  maintainers = [{ name = "Simon van Lierde", email = "s.n.van.lierde@cml.leidenuniv.nl" }]
  name = "relab-backend"
  readme = "README.md"

  ## Dependencies and version constraints
  dependencies = [
    # Web framework and API layer
    "fastapi-filter>=2.0.1",
    "fastapi-mail>=1.6.2",
    "fastapi-pagination>=0.13.2",
    "fastapi>=0.115.14",
    "uvicorn[standard]>=0.42.0",
    # Authentication, sessions, and rate limiting
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "cashews>=7.5.0",
    "fastapi-users[oauth,redis,sqlalchemy]>=14.0.1",
    "pyjwt[crypto]>=2.12.1",
    "inflect>=7.5.0",
    "redis>=5.2.1",
    "limits[redis]>=5.8.0",
    # Database and persistence
    "sqlalchemy>=2.0.41",
    # Shared application models and outbound integrations
    "httpx[http2]>=0.28.1",
    "relab-rpi-cam-models>=0.3.0",
    # Password strength and breach checking
    "zxcvbn>=4.4.28",
    # Configuration, validation, and utility types
    "loguru>=0.7.3",
    "pydantic>=2.12",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-slugify>=8.0.4",
    # Media and image processing
    "piexif>=1.1.3",
    "pillow>=11.2.1",
    # Observability
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp-proto-http>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b0",
    "opentelemetry-instrumentation-httpx>=0.62b0",
  ]
  requires-python = ">=3.14"
  version = "0.1.0"

  [project.urls]
    Homepage   = "https://github.com/CMLPlatform/relab"
    Issues     = "https://github.com/CMLPlatform/relab/issues"
    Repository = "https://github.com/CMLPlatform/relab.git"

### Dependency groups
[dependency-groups]
  # Developer tooling and local maintenance scripts
  dev = ["mjml>=0.11.1", "ruff>=0.12.1", "ty>=0.0.15"]

  # Schema changes, seeding, and migration-adjacent data-loading scripts
  migrations = ["alembic>=1.16.2", "alembic-postgresql-enum>=1.7.0", "psycopg[binary]>=3.2.9"]

  # Optional S3-compatible storage backend
  s3 = ["boto3>=1.38.0"]

  # Optional taxonomy-import tooling used by one-off seeding scripts
  seed-taxonomies = ["openpyxl>=3.1.5", "pandas>=2.3.3", "requests>=2.32.0"]

  # Heavy deps for scripts/plugins/rpi_cam/webcam_fake_camera.py (local dev only)
  fake-camera = ["opencv-python>=4.0", "websockets>=14.0"]

  # Unit and integration test dependencies
  tests = [
    # Core testing frameworks
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.5.0",   # Parallel test execution
    "pytest>=8.4.1",

    # HTTP and async testing
    "httpx[http2]>=0.27.0", # Modern async HTTP client

    # Test data generation
    "faker>=33.3.0",       # Realistic test data
    "polyfactory>=2.15.0", # Modern factories with Pydantic v2 support

    # Database testing
    { include-group = "migrations" },  # Migrations are run to set up the testcontainers database schema
    "pytest-alembic>=0.12.1",          # Migration testing - verify schema changes
    "testcontainers[postgres]>=4.8.2", # Ephemeral PostgreSQL for integration tests

    # Redis testing
    "fakeredis[lua]>=2.25.0", # In-memory Redis for testing

    # Mocking and assertions
    "dirty-equals>=0.8.0", # Flexible assertions for dynamic data
    "pytest-mock>=3.14.0", # Better mocking with cleaner pytest integration
  ]

### Tool configuration
[tool.alembic]
  path_separator   = "os"
  prepend_sys_path = ["."]
  script_location  = "alembic"

  [[tool.alembic.post_write_hooks]]
    executable = "%(here)s/.venv/bin/ruff"
    name       = "ruff"
    options    = "check --fix REVISION_SCRIPT_FILENAME"
    type       = "exec"

  [[tool.alembic.post_write_hooks]]
    executable = "%(here)s/.venv/bin/ruff"
    name       = "ruff_format"
    options    = "format REVISION_SCRIPT_FILENAME"
    type       = "exec"

[tool.pytest.ini_options]
  addopts = "-ra --strict-markers --strict-config"
  asyncio_default_fixture_loop_scope = "function"
  asyncio_mode = "auto"
  log_cli = false
  log_cli_format = "%(message)s"
  log_cli_level = "INFO"
  markers = [
    "api: API endpoint tests (E2E, full stack)",
    "db: Database-backed persistence and ORM tests",
    "flow: Cross-boundary user journeys spanning multiple services or routers",
    "migration: Database migration tests",
    "slow: Intentionally slower tests (for example subprocess, migration, or heavy end-to-end checks)",
  ]
  python_classes = ["Test*"]
  python_files = ["test_*.py"]
  python_functions = ["test_*"]
  testpaths = ["tests"]

[tool.coverage.run]
  branch    = true
  data_file = "reports/coverage/.coverage"
  omit      = ["*/__pycache__/*", "*/alembic/*", "*/tests/*"]
  source    = ["app"]

[tool.coverage.report]
  fail_under   = 80    # Target 80%+ coverage
  precision    = 2
  show_missing = true
  skip_covered = false

[tool.coverage.html]
  directory = "reports/coverage/html"

[tool.coverage.xml]
  output = "reports/coverage/coverage.xml"

[tool.ruff]
  fix            = true
  line-length    = 120
  target-version = "py314"

  [tool.ruff.format]
    docstring-code-format = true

  [tool.ruff.lint]
    fixable = ["ALL"]
    select  = ["ALL"]

    ignore = [
      # Prevent conflicts with formatter (see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
      "ANN204", # missing-return-type-special-method
      "COM812", # missing-trailing-comma
      "COM819", # prohibited-trailing-comma
      "E111",   # indentation-with-invalid-multiple
      "E114",   # indentation-with-invalid-multiple-comment
      "E117",   # over-indented
      "Q",      # flake8-quotes
      "W191",   # tab-indentation

      # Overly strict rules
      "D105", # undocumented-magic-method (magic methods are often self-explanatory)
      "D107", # undocumented-public-init (__init__ methods are often self-explanatory)

      # TODO: Re-enable these linting rules when we have more than one developer.
      "FIX002", # Allow todos
      "TD002",  # Allow todos without authors
      "TD003",  # Allow todos without issue links
    ]

    [tool.ruff.lint.flake8-bugbear]
      # Allow default arguments for FastAPI Depends and Query
      extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi_filter.FilterDepends"]

    [tool.ruff.lint.flake8-type-checking]
      # Allow runtime imports for FastAPI dependency injection and Pydantic validation
      exempt-modules = [
        "app",
        "fastapi",
        "fastapi_users",
        "pydantic",
        "sqlalchemy",
        "typing.Annotated",
        "relab_rpi_cam_models",
      ]
      runtime-evaluated-base-classes = ["fastapi_filter.contrib.sqlalchemy.FilterSet", "pydantic.BaseModel"]

    [tool.ruff.lint.per-file-ignores]
      "**/alembic/**/*.py" = [
        "D103",   # Up and downgrade functions are self-explanatory
        "D415",   # Alembic auto-generates script docs without punctuation
        "F401",   # Ignore unused imports, which are often required for schema changes but not directly referenced in the code
        "INP001", # The alembic scripts are not meant to be a package
        "TC003",  # Allow runtime evaluation of base classes
      ]
      "**/tests/**/*.py" = [
        "PLR2004", # Allow magic values in test files
        "S101",    # Ignore security issues over use of `assert` in test files
        "S105",    # Any secrets defined in the test suite are not real secrets
        "S106",    # Any secrets defined in the test suite are not real secrets
      ]

    [tool.ruff.lint.isort]
      # Explicitly add known first-party and third-party modules to allow invocation from the project root
      known-first-party = ["app", "scripts", "tests"]

      # Prevent the alembic directory from shadowing the alembic PyPI package
      known-third-party = ["alembic"]

    [tool.ruff.lint.pydocstyle]
      convention = "google"

    [tool.ruff.lint.pylint]
      allow-magic-value-types = ["int"]
      max-args                = 10

[tool.uv.sources]
  # Use the sibling plugin repo's copy of relab-rpi-cam-models during development so
  # the backend can pick up new DTOs before they are published to PyPI. Requires
  # /relab-rpi-cam-plugin to be checked out alongside this repo.
  relab-rpi-cam-models = { path = "../../relab-rpi-cam-plugin/relab_rpi_cam_models", editable = true }
