[project]
  # Project metadata
  authors = [{ name = "Simon van Lierde", email = "s.n.van.lierde@cml.leidenuniv.nl" }]
  classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: System :: Hardware",
  ]
  description = "Raspberry Pi Camera plugin for CML Reverse Engineering Lab app"
  license = "AGPL-3.0-or-later"
  maintainers = [{ name = "Simon van Lierde", email = "s.n.van.lierde@cml.leidenuniv.nl" }]
  name = "cml_relab-rpi-cam-plugin"
  readme = "README.md"

  # Dependencies and version constraints
  dependencies = [
    "fastapi-utils>=0.8.0",
    "fastapi[standard]>=0.115.8",
    "pydantic-settings>=2.8.0",
    "typing-inspect>=0.9.0",      # Required by fastapi-utils but not listed in its dependencies
  ]

  requires-python = "~=3.13.7"
  version         = "0.1.0"

  [project.urls] # TODO: Update these URLs when moving to new repo
    Homepage   = "https://github.com/CMLPlatform/relab"
    Issues     = "https://github.com/CMLPlatform/relab/issues"
    Repository = "https://github.com/CMLPlatform/relab.git"

[dependency-groups]
  dev = ["ruff>=0.9.6"]

## Ruff configuration
[tool.ruff]
  line-length    = 120
  target-version = "py311"
